syntax = "proto3";

package users.messages.v1;

import "buf/validate/validate.proto";

message CreateUserRequest {
  string email = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).cel = {
      id: "valid_email"
      message: "'email' must be a valid email address"
      expression: "this.isEmail()"
    }
  ];
  string password = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 72 // bcrypt limitation
  ];
}
